--- a/style.css
+++ b/style.css
@@ -1,82 +1,176 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+$color-main: #ccc;
 
-body{
-  background-color: #F5F1E9;
+$font-family: 'Source Sans Pro', sans-serif;
+
+*, *:before, *:after {
+  box-sizing: border-box;
 }
-#calendar{
-  margin-left: auto;
-  margin-right: auto;
-  width: 320px;
-  font-family: 'Nunito', Nunito;
+
+html {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-feature-settings: "liga", "kern";
+  overflow-y: scroll;
+  overflow-x: hidden;
+  height: 100%;
+  background: linear-gradient(210deg, lighten($color-main, 20%), $color-main);
 }
-#calendar_weekdays div{
-  display:inline-block;
-  vertical-align:top;
-}
-#calendar_content, #calendar_weekdays, #calendar_header{
-  position: relative;
-  width: 320px;
+
+body {
   overflow: hidden;
-  float: left;
-  z-index: 10;
-  background-color: #fff;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: $font-family;
 }
-#calendar_weekdays div, #calendar_content div{
-  width:40px;
-  height: 40px;
+
+button {
+  background: none;
+  border: none;
+  color: inherit;
+  font-size: inherit;
+  font-family: inherit;
+  font-weight: inherit;
+  &:focus {
+    outline: none;
+  }
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.app {
+  min-height: 50vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 1em;
+  background: #fff;
   overflow: hidden;
-  text-align: center;
-  background-color: #fff;
-  color: black;
+  box-shadow: 0 0 5px rgba(25,25,25,.25);
 }
-#calendar_content{
-  -webkit-border-radius: 0px 0px 12px 12px;
-  -moz-border-radius: 0px 0px 12px 12px; 
-  border-radius: 0px 0px 12px 12px;
+
+.btn {
+  font-size: 14px;
+  margin: 0 .5em;
+  border-radius: 2em;
+  padding: 0.75em 1.5em;
+  cursor: pointer;
+  background: none;
+  color: darken($color-main, 20%);
+  border: 1px solid;
+  letter-spacing: 1px;
+  font-family: $font-family;
+  color: #ffcc00;
+  border: #ffcc00 1px solid;
+  transition: 250ms ease-out;
+  &:hover, &:focus {
+    color: black;
+    background: #ffcc00;
+  }
 }
-#calendar_content div{
-  float: left;
-  
-}
-#calendar_content div:hover{
-  background-color: #ffcc00;
-  border-radius: 10px;
-}
-#calendar_content div.blank{
-  background-color: #;
-  border-radius: 10px;
-}
-#calendar_header, #calendar_content div.today{
-  zoom: 1;
-  filter: alpha(opacity=70);
-  opacity: 0.7;
-  background-color: #ffcc00;
-  border-radius: 10px;
-}
-#calendar_content div.today{
-  color: #FFFFFF;
-  
-}
-#calendar_header{
+
+.form {
   width: 100%;
-  height: 37px;
-  text-align: center;
-  background-color: #FFcc00;
-  padding: 18px 0;
-  -webkit-border-radius: 12px 12px 0px 0px;
-  -moz-border-radius: 12px 12px 0px 0px; 
-  border-radius: 12px 12px 0px 0px;
+  padding: 1.5rem 1rem 0 1rem;
+  display: flex;
+  &__input {
+    width: 100%;
+    font-size: 14px;
+    margin: 0 .5em;
+    border-radius: 2em;
+    padding: 0.75em 1.5em;
+    background: none;
+    font-family: $font-family;
+    border: #e3e3e3 1px solid;
+    transition: border 250ms ease-out;
+    &:focus {
+      border: #ffcc00 1px solid;
+      outline: none;
+    }
+  }
+  &__input,
+  &__submit-btn {
+  }
 }
-#calendar_header h1{
-  font-size: 1.5em;
-  color: #FFFFFF;
-  float:left;
-  width:70%;
-  background-color: #ffcc00;
+
+.todo-list {
+  $block: #{&};
+  width: 100%;
+  padding: 0 1rem;
+  flex: 1;
+  &__item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: .5em;
+    margin-bottom: .5em;
+    border-radius: 3px;
+    transition: 200ms;
+    color: #283838;
+    &:last-child { margin-bottom: 0; }
+    &.complete { 
+      color: #2BBF1B;
+      #{$block}__item-content {
+        &:after {
+          background: lightgreen;
+        }
+      }
+    }
+  }
+  &__item-content {
+    position: relative;
+    &:after {
+      content: "";
+      position: absolute;
+      top: 100%;
+      left: 0;
+      right: 0;
+      height: 1px;
+      background: $color-main;
+      transition: 250ms ease-out;
+      transform-origin: center;
+      transform: scalex(0);
+    }
+    &:hover, &:focus {
+      &:after {
+        transform: scalex(1);
+      }
+    }
+  }
+  &__item-remove {
+    margin-left: .5em;
+    background: none;
+    border: 1px solid;
+    color: inherit;
+    padding: 0;
+    line-height: 1;
+    width: 2em; 
+    height: 2em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    font-size: 80%;
+  }
 }
-i[class^=icon-chevron]{
-  color: #FFFFFF;
-  float: left;
-  width:15%;
-  border-radius: 50%;
+
+.filters {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  padding: 0 1rem 1.5rem 1rem;
+}
+
+.list-move,
+.list-leave-active,
+.list-enter-active, {
+  transition: 500ms cubic-bezier(.87,-.41,.19,1.44);
+}
+.list-enter,
+.list-leave-active {
+  transform: translate(100%, 0);
+  opacity: 0;
 }
