--- a/style.css
+++ b/style.css
@@ -1,150 +1,184 @@
-* {
-  box-sizing: border-box;
-  outline: none;
+/*Global*/
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-/* Center the list */
-body {
-  margin: 0;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background: #f3f5fc;
+input[type="text"]{
+    font-family: 'Nunito', sans-serif;
+    border: none;
+    outline: none;
+    border-bottom: solid 1px #ffcc00;
+    transition-duration: 0.4s;
 }
 
-#listWrapper {
-  background: white;
-  border-radius: 10px;
-  border: 1px solid #e7ecfb;
-  box-shadow: 0 0 30px rgba(211, 220, 248, .3);
-  padding: 30px;
+input[type="text"]:focus{
+    border-bottom: solid 1px #ffcc00;
+    transition-duration: 0.4s;
 }
 
-/* List title */
-#title {
-  position: relative;
-  display: flex;
-  align-items: center;
+body{
+    font-family: 'Roboto', sans-serif;
+    background: linear-gradient(to right, #ccc, #cccc);
 }
 
-#titleInput {
-  font-family: "Nunito", sans-serif;
-  font-size: 24px;
-  font-weight: 800;
-  border: 1px solid transparent;
-  border-radius: 9px;
-  color: #ffcc00;
-  padding: 9px 18px;
+li{
+    list-style: none;
 }
 
-#titleInput::placeholder {
-  color: #ffcc00;
+button{
+    padding: 0;
+    border: none;
+    background: none
 }
 
-/* List title pencil */
-.fa-pencil-alt {
-  font-size: 18px;
-  border-radius: 50%;
-  position: absolute;
-  right: 24px;
-  pointer-events: none;
-  color: #ffcc00;
+/*Content*/
+/*--head*/
+.todolist{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
-/* Separator */
-#separator {
-  margin: 12px 0;
-  box-shadow: 0 12px 12px rgba(211, 220, 248, .3);
-  border-top: 0;
-  border-right: 0;
-  border-left: 0;
-  max-width: 100%;
-  height: 10px;
+.todolist__main{
+    background-color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 5px 5px 15px 0px rgba(0,0,0,0.75);
+    padding: 25px 0px;
+    border-radius: 20px;
+    width: 400px;
 }
 
-/* To do items wrapper */
-#itemsWrapper {
-  padding: 8px 8px;
-  margin: 12px 0;
+.todolist__header{
+    padding: 0px 20px;
 }
 
-/* To do item */
-.item {
-  width: 100%;
-  font-size: 18px;
-  font-family: "Nunito", sans-serif;
-  border-radius: 12px;
-  border: 0;
-  padding: 9px 12px;
-  color: #3f455f;
-  position: relative;
+.todolist__header--date{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
-.itemInner {
-  padding: 9px 0;
-  display: flex;
-  align-items: center;
-  font-size: 16px;
+.todolist__header--date span:nth-child(1){
+    font-size: 48px;
+    color: #ffcc00;
+    font-weight: 400;
 }
 
-.itemInner p {
-  margin: 0;
-  pointer-events: none;
+.warpper{
+    display: flex;
+    flex-direction: column;
+    margin-left: 10px;
 }
 
-/* Item buttons */
-.fa-trash-alt {
-  pointer-events: none;
-  color: #ffcc00;
-  font-size: 18px;
+.warpper span:nth-child(1){
+    font-size: 16px;
+    color: #858585;
+    font-weight: 500;
 }
 
-.removeItemBtn {
-  position: absolute;
-  right: 4px;
-  background: transparent;
-  border: 0;
-  cursor: pointer;
-  opacity: 0;
+.warpper span:nth-child(2){
+    font-size: 16px;
+    color: #ffcc00;
+    font-weight: 300;
 }
 
-.fa-hand-point-right {
-  color: #ffcc00;
-  margin-right: 9px;
-  font-size: 24px;
-  cursor: pointer;
+.add__input{
+    padding: 5px;
+    width: 100%;
+    font-size: 16px;
 }
 
-/* Add a new item section */
-#addNewItemWrapper {
-  width: 100%;
-  position: relative;
-  display: flex;
-  align-items: center;
+.add__circle{
+    margin-left: auto;
+    cursor: pointer;
 }
 
-#addNewItemInput {
-  width: 100%;
-  font-family: "Nunito", sans-serif;
-  font-size: 16px;
-  font-weight: 600;
-  border: 0;
-  border-radius: 9px;
-  color: #666f99;
-  padding: 12px 60px 12px 18px;
-  background: #f3f5fc;
+.ion-plus-circled{
+    font-size: 60px;
+    color: #ffcc00;
+    transition-duration: 0.4s;
 }
 
-#addNewItemBtn {
-  position: absolute;
-  right: 0;
-  height: 100%;
-  padding: 0 18px;
-  background: transparent;
-  border: 0;
-  color: #ffcc00;
-  cursor: pointer;
-  font-size: 18px;
+.ion-plus-circled:hover{
+    color: #ffcc00;
+    transition-duration: 0.4s;
+}
+
+
+/*--result*/
+/*fix size of task list*/
+.todolist__result{
+    overflow-y: scroll;
+    height: 300px;
+}
+
+/*overflow scroll without scrollbar*/
+.todolist__result::-webkit-scrollbar { width: 0 !important }
+
+.list__task{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 10px 20px;
+    cursor: pointer;
+    transition-duration: 0.2s;
+}
+
+.list__task:hover{
+    border-left: solid 5px #38ef7d;
+    background-color: #eeeeee;
+    transition-duration: 0.2s;
+    transition-timing-function: ease-in;
+}
+
+.list__task i{
+    font-size: 20px;
+}
+
+.list__task--check{
+    color: #ffcc00;
+    transition-duration: 0.4s;
+}
+
+.list__task--text{
+    margin: 10px;
+    transition-duration: 0.4s;
+}
+
+
+.list__task--del{
+    color: #ffcc00;
+    margin-left: auto;
+    margin-right: 10px;
+}
+
+
+.ion-ios-checkmark:hover{
+    color: #38ef7d;
+    transition-duration: 0.4s;
+}
+
+
+.ion-android-delete:hover{
+    color: #ff0000;
+    transition-duration: 0.4s;
+}
+
+/*ClassList Toggle : checked*/
+.list__task--checked{
+    color: #00881d;
+}
+
+.list__task--text--checked{
+    margin-left: 10px;
+    margin: 10px;
+    color: #aaaaaa;
+    text-decoration: line-through;
+    transition-duration: 0.4s;
 }
